# A_memorix

./: .dockerignore  .gitignore  CHANGELOG.md  CONFIG_REFERENCE.md  DEVELOPER_API_GUIDE.md  Dockerfile  IMPORT_GUIDE.md  QUICK_START.md  README.md  __init__.py  _manifest.json  benchmark.md  config.toml.example  plugin.py  pyproject.toml  requirements.txt  server.py
amemorix/: app.py  bootstrap.py
benchmarks/: README.md  benchmark_temporal_query.py  benchmark_v1_time_e2e.py
benchmarks/results/: docker_smoke_20260224.json  e2e_large_seed42.txt  e2e_medium_noperson_seed42.txt  e2e_medium_seed42.txt  e2e_small_seed7.txt  e2e_summary.json  large_seed42.txt  medium_noperson_seed42.txt  medium_seed42.txt  pytest_q.txt  small_seed7.txt  summary.json
components/: __init__.py
components/actions/: __init__.py  knowledge_search_action.py  summary_import_action.py
components/commands/: __init__.py  debug_server_command.py  delete_command.py  import_command.py  memory_command.py  person_profile_command.py  query_command.py  visualize_command.py
components/tools/: __init__.py  knowledge_query_tool.py  memory_modifier_tool.py
core/: __init__.py
core/embedding/: api_adapter.py
core/retrieval/: __init__.py  dual_path.py
core/storage/: graph_store.py  metadata_store.py  vector_store.py
core/strategies/: base.py  factual.py  narrative.py
paper/: ACL2026_DEMO_PAPER_DRAFT.md
scripts/: backfill_temporal_metadata.py  convert_lpmm.py  delete_knowledge.py  import_lpmm_json.py  migrate_maibot_memory.py  process_knowledge.py
web/: import.html  index.html
(+14 files in other folders)
